After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 730982 - Minor annotation fixes
Minor annotation fixes
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
unspecified
Other Linux
: Normal minor
: 1.3.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks: 730983
 
 
Reported: 2014-05-30 07:22 UTC by Evan Nemerson
Modified: 2014-06-06 19:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
introspection: fix some minor annotation bugs (3.76 KB, patch)
2014-05-30 07:22 UTC, Evan Nemerson
none Details | Review
introspection: fix some minor annotation bugs (4.84 KB, patch)
2014-06-04 22:07 UTC, Evan Nemerson
committed Details | Review

Description Evan Nemerson 2014-05-30 07:22:10 UTC
Created attachment 277517 [details] [review]
introspection: fix some minor annotation bugs

Just a few miscellaneous bugs I noticed.
Comment 1 Evan Nemerson 2014-06-04 22:07:38 UTC
Created attachment 277909 [details] [review]
introspection: fix some minor annotation bugs

Includes a couple more.
Comment 2 Olivier Crête 2014-06-06 19:19:02 UTC
Thank you for your contribution, this has been merged:

Author: Evan Nemerson <evan@nemerson.com>
Date:   Fri May 30 00:17:06 2014 -0700

    introspection: fix some minor annotation bugs
    
    https://bugzilla.gnome.org/show_bug.cgi?id=730982