introspection: fix some minor annotation bugs

https://bugzilla.gnome.org/show_bug.cgi?id=730982