libs/gst/base/gstindex.c
@@ -775,7 +775,7 @@ gst_index_add_entry (GstIndex * index, GstIndexEntry * entry)
  * @id: the id of the index writer
  * @flags: optinal flags for this entry
  * @n: number of associations
- * @list: list of associations
+ * @list: (array length=n): list of associations
  *
  * Associate given format/value pairs with each other.
  *
